--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,1 +1,25 @@
-<p>user-list works!</p>
+<div>
+    <h3>User list</h3>
+    <table class = "table table-sm">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Username</th>
+                <th>Fullname</th>
+                <th>Email</th>
+                <th>Reviewer</th>
+                <th>Admin</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor = "let user of users">
+                <td>{{user.id}}</td>
+                <td>{{user.username}}</td>
+                <td>{{user.firstname}} {{user.lastname}}</td>
+                <td>{{user.email}}</td>
+                <td>{{user.reviewer}}</td>
+                <td>{{user.admin}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
